# supekku-dev

./: .gitignore  flake.nix  main.py  pyproject.toml
doc/: AGENTS.md
public/assets/img/: simple.d2
